# m3

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.alpine  LICENSE  MANIFEST.in  Makefile  OAUTH2_AUTHENTICATION.md  Pipfile  README.md  docker-compose.yml  llms-install.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/workflows/: deploy-webapp.yaml  pre-commit.yaml  pre-commit.yml  publish.yaml  tests.yaml
benchmarks/: setup_goose_mcp.py
benchmarks/ehrsql/: README.md  run_mimic_iv_demo_evaluation.py
benchmarks/ehrsql-naacl2024/: EHRSQL_benchmark.csv  README.md
benchmarks/ehrsql-naacl2024/gpt-oss-20B/: EHRSQL_benchmark.csv  EHRSQL_benchmark_unanswerable.csv
benchmarks/ehrsql-naacl2024/gpt-oss-20B/conversations/: 10.conversation.json  100.conversation.json  101.conversation.json  11.conversation.json  12.conversation.json  13.conversation.json  14.conversation.json  15.conversation.json  16.conversation.json  17.conversation.json  18.conversation.json  19.conversation.json  2.conversation.json  20.conversation.json  21.conversation.json  22.conversation.json  23.conversation.json  24.conversation.json  25.conversation.json  26.conversation.json  27.conversation.json  28.conversation.json  29.conversation.json  3.conversation.json  30.conversation.json  31.conversation.json  32.conversation.json  33.conversation.json  34.conversation.json  35.conversation.json  36.conversation.json  37.conversation.json  38.conversation.json  39.conversation.json  4.conversation.json  40.conversation.json  41.conversation.json  42.conversation.json  43.conversation.json  44.conversation.json  (+60 more)
benchmarks/ehrsql-naacl2024/gpt-oss-20B/conversations_unanswerable/: 1.conversation.json  10.conversation.json  100.conversation.json  11.conversation.json  12.conversation.json  13.conversation.json  14.conversation.json  15.conversation.json  16.conversation.json  17.conversation.json  18.conversation.json  19.conversation.json  2.conversation.json  20.conversation.json  21.conversation.json  22.conversation.json  23.conversation.json  24.conversation.json  25.conversation.json  26.conversation.json  27.conversation.json  28.conversation.json  29.conversation.json  3.conversation.json  30.conversation.json  31.conversation.json  32.conversation.json  33.conversation.json  34.conversation.json  35.conversation.json  36.conversation.json  37.conversation.json  38.conversation.json  39.conversation.json  4.conversation.json  40.conversation.json  41.conversation.json  42.conversation.json  43.conversation.json  44.conversation.json  (+60 more)
benchmarks/ehrsql/dataset/: __init__.py  download.py
benchmarks/ehrsql/evaluators/: goose_evaluator.py
docs/: OAUTH2_AUTHENTICATION.md
mcp/: main.py  mimic.py  pyproject.toml
mcp_client_configs/: dynamic_mcp_config.py  setup_claude_desktop.py
mimic/: mimic.py
src/m3/: __init__.py  auth.py  cli.py  config.py  data_io.py  datasets.py  m3.py  mcp_server.py
src/m3/core/: config.py  server.py
src/m3/core/mcp_config_generator/: __init__.py  base.py  registry.py
src/m3/core/mcp_config_generator/mcp_config_generators/: claude_mcp_config.py  fast_mcp_config.py  universal_mcp_config.py
src/m3/core/preset/: base.py  registry.py
src/m3/core/preset/presets/: default_preset.py
src/m3/core/tool/: base.py
src/m3/core/tool/backend/: base.py  registry.py
src/m3/core/tool/backend/backends/: bigquery.py  sqlite.py
src/m3/core/tool/cli/: base.py
src/m3/core/utils/: exceptions.py  helpers.py  logging.py
src/m3/mcp_client_configs/: dynamic_mcp_config.py  setup_claude_desktop.py
src/m3/tools/: registry.py
src/m3/tools/m3toolbuilder/: __init__.py  cli.py  m3toolbuilder.py
src/m3/tools/m3toolbuilder/configurations/: knowledge.yaml  tools_codebase.txt
src/m3/tools/mimic/: __init__.py  cli.py  mimic.py
src/m3/tools/mimic/components/: __init__.py  auth.py  data_io.py  utils.py
src/m3/tools/mimic/configurations/: datasets.yaml  env_vars.yaml  security.yaml
tests/: functional_test.ipynb  functional_test.py  test_cli.py  test_config.py  test_config_scripts.py  test_data_io.py  test_docker.py  test_dynamic_switching.py  test_example.py  test_health_check.py  test_mcp_server.py  test_oauth2_auth.py  test_oauth2_basic.py  test_type_checks.py
tests/core/: test_config.py  test_mcp_config_generator.py  test_server.py  test_tool.py
tests/m3/: test_cli.py  test_m3.py
tests/tools/: test_tools.py
webapp/: README.md  package-lock.json  package.json
webapp/public/: index.html  manifest.json
webapp/src/: App.css  App.js
webapp/src/components/: ArchitectureDiagram.js  CTA.js  Citation.js  Contact.js  Demos.js  Documentation.js  Explanation.js  Features.js  Footer.js  Header.js  Hero.js  Installation.js  Paper.js
