[project]
name = "mimic"
version = "0.1.0"
description = "MIMIC-IV MCP Server for BigQuery access"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "fastmcp>=0.1.0",
    "google-cloud-bigquery>=3.0.0",
    "pandas>=2.0.0",
    "db-dtypes>=1.0.0",
]
